--- a/index.css
+++ b/index.css
@@ -11,13 +11,13 @@ body {
 
 #header {
   width: 100vw;
-  height: 6%;
+  height: 56px;
   background: white;
   position: relative;
 }
 
 #header-left {
-  width: 10%;
+  width: 13%;
   height: 100%;
   background: white;
   float: left;
@@ -39,8 +39,9 @@ body {
 #main-menu i {
   position: relative;
   left: 50%;
-  top: 50%;
+  top: 55%;
   transform: translate(-50%, -50%);
+  font-size: 1.2rem;
 }
 
 #logo {
@@ -58,10 +59,10 @@ body {
 }
 
 #header-center {
-  width: 30%;
+  width: 40%;
   height: 60%;
   position: absolute;
-  left: 45%;
+  left: 47%;
   top: 50%;
   transform: translate(-50%, -50%);
   overflow: hidden;
@@ -69,13 +70,13 @@ body {
 
 #searchBar {
   padding-left: 10px;
-  height: 100%;
+  height: 95%;
   float: left;
-  outline: solid 1px grey;
+  border: solid 1px grey;
 }
 
 #searchBar input {
-  width: 362px;
+  width: 482px;
   height: 30px;
   border: 0px;
   clear: both;
@@ -84,10 +85,11 @@ body {
 
 #searchEnter {
   width: 25px;
-  height: 100%;
-  outline: solid 1px grey;
+  height: 80%;
+  border: solid 1px grey;
+  border-left: none;
   float: left;
-  padding: 5px;
+  padding: 5px 5px 0 5px;
   text-align: center;
 }
 
@@ -99,15 +101,20 @@ body {
   text-align: center;
 }
 
+#voiceControl i {
+  transform: translateY(1.5px);
+}
+
 #header-right {
   position: relative;
-  /* left: 45%; */
+  right: 20px;
   top: 50%;
   transform: translateY(-50%);
   float: right;
   overflow: hidden;
-  width: 12%;
+  width: 13%;
   height: 80%;
+  padding-top: 10px;
 }
 
 #header-right table {
@@ -116,6 +123,7 @@ body {
   box-sizing: border-box;
   text-indent: initial;
   border-spacing: 2px;
+  margin: 0;
 }
 
 #header-right table td {
@@ -131,35 +139,15 @@ body {
   cursor: pointer;
 }
 
-#upload {
-  width: 36px;
-  height: 36px;
-  background: white;
-  text-align: center;
-}
-
-#apps-menu-icon {
-  width: 24px;
-  height: 24px;
-  line-height: 36px;
-}
-
-#setting {
-  width: 36px;
-  height: 36px;
-}
-
-#profile {
-  width: 36px;
-  height: 36px;
-}
-
 #left {
-  width: 14%;
+  width: 17%;
   height: 94%;
   float: left;
   background-color: white;
-  overflow-x: hidden;
+  overflow: hidden;
+}
+
+#left:hover {
   overflow-y: scroll;
 }
 
@@ -171,7 +159,7 @@ body {
 }
 
 .a1 {
-  width: 210px;
+  width: 260px;
   height: 100px;
 }
 
@@ -191,16 +179,17 @@ body {
 }
 
 #right {
-  width: 86%;
+  width: 83%;
   height: 94%;
   margin: 0px;
-  background-color: white;
+  background: #f5f5f5;
   float: right;
   overflow-x: hidden;
 }
 
 body table { 
   width: 100%; 
+  margin: 30px 0;
 }
 
 body table td {
